--- a/css/accueil.css
+++ b/css/accueil.css
@@ -19,6 +19,9 @@
 .mt-6{
     margin-top: 5%;
 }
+.ms{
+    margin-left: 2%;
+}
 .items-center{
                align-items: center;
 }
@@ -68,6 +71,9 @@ p{
     width: 100%;
     object-fit: cover;
 }
+.objectif-fit{
+    object-fit: cover;
+}
 .center{
     justify-content: center;
 }
@@ -90,6 +96,9 @@ h2{
 }
 .fs-2{
     font-size: 35px;
+}
+.align-self{
+    align-self: flex-end;
 }
 
 @media (min-width: 100px) and (max-width: 600px){
