--- a/css/accueil.css
+++ b/css/accueil.css
@@ -100,6 +100,9 @@ h2{
 .align-self{
     align-self: flex-end;
 }
+.border{
+    border: black solid;
+}
 
 @media (min-width: 100px) and (max-width: 600px){
     .flex{
